--- a/src/pages/Universal/Universal.scss
+++ b/src/pages/Universal/Universal.scss
@@ -29,6 +29,7 @@
         max-width: 100%;
         display: flex;
         justify-content: center;
+        flex-direction: column;
         h1{
             font-size: 2rem;
             font-weight: 400;
@@ -172,7 +173,11 @@
                                 position: absolute;
                                 z-index: 1;
                                 flex-direction: column;
-
+                                background: rgba( 255, 255, 255, 0.25 );
+                                box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+                                backdrop-filter: blur( 4px );
+                                -webkit-backdrop-filter: blur( 4px );
+                                border-radius: 10px;
                             & li{
 
                                 list-style: none;
@@ -188,9 +193,10 @@
                                     cursor: pointer;
                                 }
                                 & .color_box{
-                                    height: 1rem;
-                                    width: 1rem;
-                                    border: 1px solid black;
+                                    height: 1.2rem;
+                                    width: 1.2rem;
+                                    border-radius: 0.1rem;
+                                    border: 0.5px solid black;
                                     }
                                 }
                             }
@@ -241,6 +247,7 @@
                     }
                 }
             & .uni_item{
+                position: relative;
                 display: grid;
                 grid-template-columns: repeat(5, 1fr);
                 gap: 1rem;
@@ -249,6 +256,7 @@
                 grid-row-gap: 3rem;
                 justify-items: start;
                 padding-top: 1rem;
+                
                 & .uni_wrap{
                     cursor: pointer;
                     width: fit-content;
@@ -307,6 +315,31 @@
                         }
                     }
                 }
+            }
+        }
+        & .next_prev_button{
+
+            height: fit-content;
+            width: 100%;
+            font-size: 0.8rem;
+            letter-spacing: 0.03rem;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            gap: 1rem;
+            bottom: -1rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 2rem 0rem 3rem 13rem;
+ 
+            & .load_more_button{
+                letter-spacing: 0.05rem;
+                background-color: #222222;
+                cursor: pointer;
+                border: 0px;
+                padding: 1rem 2rem;
+                color: white;
             }
         }
     }
