--- a/src/components/HomeCategories.scss
+++ b/src/components/HomeCategories.scss
@@ -1,31 +1,28 @@
 .hm_cat{
-    margin-top: 5rem;
-    padding: 5rem 7rem 5rem 7rem;
+    padding: 5.5rem 4rem 0rem 4rem;
     height: fit-content;
     width: 100%;
-    background-color: black;
-    color: white !important;
-
     h1{
-        font-size: 2rem;
-        font-weight: 400;
+        font-size: 3rem;
+        font-weight: 500;
+        padding-bottom: 0.7rem;
+        text-align: center;
     }
     .hm_cat_wrap{
-        display: flex;
         justify-content: space-around;
-        gap: 2rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 0.5rem;
         .hm_item{
             padding-top: 3vh;
-            height: 23rem;
             cursor: pointer;
-            min-width: 10rem;
-            width: 15rem;
             display: flex;
             justify-content: center;
             position: relative;
-            flex-direction: column;
+            width: 100%;
             .title{
-           
+                text-decoration: none;
                 display: flex;
                 justify-content: center;
                 font-size: 1rem;
@@ -36,15 +33,17 @@
                 align-items: center;
             }
             .img{
-                height: 100%;
-                width: 100%;
-                background-size: 15rem;
+           
+                background-size: cover;
                 background-repeat: no-repeat;
                 background-position: center;
                 transition: 0.25s ease-in-out;
+                filter: brightness(98%);
+                height: 25rem;
+                object-fit: fill;
             }
             .img:hover{
-                background-size: 15.7rem;
+                background-size: 13.7rem;
             }
         }
     }
