--- a/src/pages/Men/MenHome.scss
+++ b/src/pages/Men/MenHome.scss
@@ -1,25 +1,31 @@
-.index_men{
+.index_men {
     background-color: black;
-    position: relative;
-   & .video_control{
-    position: relative;
-    z-index: 5;
-    width: 100%;
-   }
-   & .index_men_overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: block;
+    & .video_control {
+        position: relative;
+        z-index: 5;
+        width: 100%;
+        display: block;
+    }
+    & .index_men_overlay {
         top: 0px;
         position: absolute;
         width: 100%;
         height: 100%;
         background-color: rgba(0, 0, 0, 0.5);
         z-index: 5;
-   }
-   & .index_men_text{
+    }
+    & .index_men_text {
         top: 0px;
         position: absolute;
         width: 100%;
         height: 100%;
-        & .wrapper{
+        & .wrapper {
             position: relative;
             display: grid;
             align-items: center;
@@ -30,7 +36,7 @@
             width: 100%;
             height: 100%;
 
-            & .men_main_link{
+            & .men_main_link {
                 position: absolute;
                 top: 50%;
                 left: 50%;
@@ -40,34 +46,34 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                
-            & h1{
-                text-align: center;
-                font-size: calc(2rem + 1.5vw)
-            }
-            & p{
-                font-size: calc(0.1rem + 0.8vw);
-                width: 400px;
-                text-align: center;
-            }
-            & .men_index{
-                margin-top: 1rem;
-                padding: 0.9rem 3.1rem;
-                cursor: pointer;
-                border: 1px solid white;
-                background-color: transparent;
-                color: white;
-                transition: 0.3s ease-in-out;
-                &:hover{
+
+                & h1 {
+                    text-align: center;
+                    font-size: calc(2rem + 1.5vw)
+                }
+                & p {
+                    font-size: calc(0.1rem + 0.8vw);
+                    width: 400px;
+                    text-align: center;
+                }
+                & .men_index {
                     margin-top: 1rem;
-                    padding: 0.8rem 3rem;
-                    background-color: white;
-                    color: black;
-                    border: none;     
+                    padding: 0.9rem 3.1rem;
+                    cursor: pointer;
+                    border: 1px solid white;
+                    background-color: transparent;
+                    color: white;
+                    transition: 0.3s ease-in-out;
+                    &:hover {
+                        margin-top: 1rem;
+                        padding: 0.8rem 3rem;
+                        background-color: white;
+                        color: black;
+                        border: none;
+                    }
                 }
             }
-            }
-            & .men_side_link{
+            & .men_side_link {
                 position: absolute;
                 right: 0px;
                 bottom: 0px;
@@ -78,13 +84,95 @@
                 display: flex;
                 flex-direction: column;
                 gap: 1rem;
-                & li{
+                & li {
                     cursor: pointer;
-                    &:hover{
+                    &:hover {
                         text-decoration: underline;
                     }
                 }
             }
         }
-   }
+    }
+}
+
+.index_page_main {
+    z-index: 1;
+    height: fit-content;
+    width: 100vw;
+    background-color: white;
+    margin-top: 100vh;
+    scroll-snap-points-y: repeat(100vh);
+    position: relative; /* Add position relative to allow overlapping with .index_men */
+
+    & .index_page_main_sections{
+        height: 100vh;
+        width: 100vw;
+        scroll-snap-align: start;
+        background-size: cover;
+        & .section_one{
+            position: relative;
+            height: 100%;
+            width: 100%;
+            display: flex;
+            & .img{
+                height: 100%;
+                width: 100%;
+                display: flex;
+                background-image: url("https://images.unsplash.com/photo-1464746133101-a2c3f88e0dd9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1743&q=80");
+                background-size: cover;
+                filter: brightness(75%);
+            }
+            & .parallax_img{
+                position: absolute;
+                background-image: url(../../images/parallax.png);
+                background-size: cover;
+                height: 100%;
+                width: 100%;
+                top: 0px;
+                left: 0px;
+                z-index: 1;
+            }
+
+            & .summer{
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-80%, -50%);
+                color: white;
+                font-size: 10rem;
+                font-weight: 800;
+            }
+            & .links{
+                position: absolute;
+                bottom: 7%;
+                right: 5%;
+                z-index: 3;
+                & ul{
+                    list-style: none;
+                    font-size: 1rem;
+                    color: white;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 0.7rem;
+         
+                    & li{
+                        cursor: pointer;
+                        &:hover{
+                            text-decoration: underline;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    & .vide_section{
+        height: fit-content;
+      width: 100vw;
+      & .video_control {
+        position: relative;
+        z-index: 5;
+        width: 100%;
+        display: block;
+    }
+    }
 }
