--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -112,6 +112,7 @@
                 }
                 & .bag_box_open{
                     display: flex;
+                    z-index: 1;
                 }
             }
         }
@@ -119,14 +120,55 @@
     & .nav_cl_links{
         padding-top: 1.5rem;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         font-size: 0.9rem;
+
         & ul{
             display: flex;
             list-style: none;
             gap: 2rem;
         }  
+        & .search_wrapper{
+                z-index: 0;
+                display: flex;
+                align-items: center;
+                border-bottom: 1px solid;
+                position: relative;
+                gap: 0.2rem;
+                font-size: 1.4rem;
+            & .search_products{
+                font-size: 0.8rem;
+                border: none;
+                outline: none;
+                font-family: 'Urbanist', sans-serif;
+                &::placeholder{
+                    color: rgb(50, 50, 50);
+                }
+            }
+            & .suggestion_list{
+                position: absolute;
+                display: flex;
+                flex-direction: column;
+                font-size: 0.8rem;
+                bottom : -5px;
+                transform: translateY(100%);
+                gap: 0px;
+                background-color: white;
+                width: 100%;
+                & li{
+                    padding: 1rem;
+                    &:hover{
+                        text-decoration: none;
+                        background-color: rgb(225, 225, 225);
+                        transition: 0.3s ease-in-out;
+                    }
+                }
+            }
+            & .icon{
+                cursor: pointer;
+            }
+        }
     }
     & .content{
         border-bottom: 4px solid black;
