--- a/src/pages/Universal/Universal.scss
+++ b/src/pages/Universal/Universal.scss
@@ -22,10 +22,10 @@
 
 .uni_con{
     height: fit-content;
-    width: 100vw;
+    width: 100%;
     & .home_cl_products{
         height: fit-content;
-        width: 100vw;
+        width: 100%;
         max-width: 100%;
         display: flex;
         justify-content: center;
