--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *,
 *::before,
 *::after {
@@ -13,6 +15,7 @@
 body{
     box-sizing: border-box;
     font-size: 62.5%;
+    font-family: 'DM Sans', sans-serif;
     font-family: 'Urbanist', sans-serif;
     width: 100vw;
     max-width: 100%;
