--- a/src/pages/Admin/admin.scss
+++ b/src/pages/Admin/admin.scss
@@ -1,4 +1,63 @@
 .main_products{
     font-size: 1rem;
     padding: 2rem;
+    & .admin_product_wrapper{
+        display: flex;
+        gap: 5rem;
+        & .wrapper_one{
+            flex: 1;
+            height: fit-content;
+            & label{
+                display: flex;
+                width: 5rem;
+                font-size: 0.8rem;
+            }
+            & input[type="text"], & input[type="number"] {
+                width: 16rem;
+                height: 2rem;
+                padding-left: 0.5rem;
+            }
+            & select{
+                width: 16rem;
+                height: 2rem;  
+            }
+            & .upload_button{
+                width: fit-content;
+                background-color: white;
+                padding: 3rem 2rem;
+                border: dashed black 1px;
+                & input[type="file"]{
+                    display: none;
+                }
+                & label{
+                    width: 100%;
+                    display: flex;
+                    position: relative;
+                    background-color: black;
+                    color: white;
+                    font-size: 1.1rem;
+                    font-weight: 500;
+                    text-align: center;
+                    padding: 1rem 4rem;
+                    border-radius: 0.3rem;
+                    cursor: pointer;
+                    gap: 1rem;
+                    align-items: center;
+                    & .icon{
+                        font-size: 2rem;
+                    }
+                }
+                & .num_of_files{
+                    font-weight: 400;
+                    text-align: center;
+                    margin: 1.25em 0.187em 0em;
+                }
+            }
+        }
+        
+        & .wrapper_two{
+            flex: 1;
+            height: fit-content;
+        }
+    }
 }
